build/project/sgyt-api-quote/.argocd/service.yml

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sgyt-api-quote
  name: sgyt-api-quote 
  namespace: backend

spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sgyt-api-quote
